--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,34 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
   text-align: center;
+  margin: 5vh 10vw;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.sidebar {
+  width: 300px;
+  min-height: 400px;
+  position: absolute;
+  right: 0;
+  border: 1px solid black;
+  overflow: scroll;
+}
+
+.sidebar li {
+  list-style: none;
+}
+
+.sidebar ul {
+  margin: 0;
+  padding: 0;
 }
