--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 #root {
   width: 100%;
   text-align: center;
-  margin: 5vh 10vw;
   position: relative;
   display: flex;
   justify-content: center;
@@ -18,7 +17,6 @@
 .sidebar {
   width: 300px;
   min-height: 400px;
-  position: absolute;
   right: 0;
   border: 1px solid black;
   overflow: scroll;
@@ -31,4 +29,12 @@
 .sidebar ul {
   margin: 0;
   padding: 0;
+}
+
+.constraints {
+  width: 300px;
+  min-height: 400px;
+  right: 0;
+  border: 1px solid black;
+  overflow: scroll;
 }
