--- a/src/Section/Section.css
+++ b/src/Section/Section.css
@@ -1,15 +1,22 @@
 .section {
     width: 100%;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 0;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-}
-
-.section > span {
-    padding: 5px 5px;
 }
 
 button {
     padding: 5px 10px;
+}
+
+.section-number {
+    padding: 0 20px;
+    font-weight: bold;
+}
+.controls {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
