--- a/src/Contstraint/Constraint.css
+++ b/src/Contstraint/Constraint.css
@@ -3,4 +3,17 @@
     height: 41px;
     align-items: center;
     padding: 0 8px;
+    position: relative;
+    min-width: 60px;
+}
+
+.edit-constraint-container {
+    position: absolute;
+    left: 100%;
+    background-color: white;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 10px;
 }
