--- a/src/App.css
+++ b/src/App.css
@@ -22,18 +22,40 @@
   overflow: scroll;
 }
 
-.sidebar li {
-  list-style: none;
-}
-
-.sidebar ul {
-  margin: 0;
-  padding: 0;
-}
-
 .constraints {
   width: 300px;
   min-height: 400px;
   right: 0;
   border: 1px solid black;
+}
+
+.fixed-cells-container {
+  height: 4em;
+  border: 1px solid black;
+  padding: 4px 8px;
+}
+
+.fixed-cells-container h4{
+  margin: 0;
+  text-align: left;
+}
+
+.fixed-cells-container li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 10px 0 0;
+}
+
+.fixed-cells-container li:before {
+  content: '[';
+}
+.fixed-cells-container li:after {
+  content: ']';
+}
+
+.fixed-cells-container ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: start;
 }
