added export functionality now

--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,7 @@ html {
   align-items: start;
 }
 
-.upload-fixed,
-.upload-constraint {
+.upload-modal {
   padding: 32px 64px;
   max-width: 600px;
   text-align: start;
